Update README and package.json for improved project setup; add Vite configuration

--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "start": "ts-node src/main.ts",
     "build": "tsc",
     "start:server": "bun run src/server.ts",
-    "start:client": "bun run src/client/index.tsx",
-    "dev:client": "bun --hot src/client/index.tsx",
-    "build:client": "bun build src/client/index.tsx --outdir dist/client",
-    "build:server": "tsc src/server.ts --outDir dist/server"
+    "build:server": "tsc src/server.ts --outDir dist/server",
+    "dev:client": "vite --config vite.config.ts",
+    "build:client": "vite build --config vite.config.ts"
   },
   "keywords": [
     "typescript",
@@ -22,9 +21,11 @@
   "dependencies": {
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
     "effect": "^2.0.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "vite": "^7.0.3"
   },
   "devDependencies": {
     "@types/bun": "^1.2.18",
