--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "A starter project using the TypeScript Effect framework.",
   "main": "dist/main.js",
   "scripts": {
-    "start": "ts-node src/main.ts",
-    "build": "tsc",
     "start:server": "bun run src/server.ts",
-    "build:server": "tsc src/server.ts --outDir dist/server",
     "dev:client": "vite --config vite.config.ts",
     "build:client": "vite build --config vite.config.ts"
   },
@@ -25,11 +22,12 @@
     "effect": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "vite": "^7.0.3"
   },
   "devDependencies": {
     "@types/bun": "^1.2.18",
-    "ts-node": "^10.0.0",
     "typescript": "^5.0.0"
-  }
+  },
+  "packageManager": "bun@1.2.12"
 }
