--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "start:server": "bun run src/server.ts",
-    "dev:client": "vite --config vite.config.ts",
-    "build:client": "vite build --config vite.config.ts",
+    "dev:client": "TAILWIND_CONFIG_PATH=./src/client/tailwind.config.js vite --config vite.config.ts",
+    "build:client": "TAILWIND_CONFIG_PATH=./src/client/tailwind.config.js vite build --config vite.config.ts",
     "test": "vitest run --config vitest.config.ts"
   },
   "keywords": [
@@ -19,25 +19,25 @@
   "dependencies": {
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
     "effect": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
-    "vite": "^7.0.3"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/bun": "^1.2.18",
-    "autoprefixer": "^10.4.21",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.0",
     "jsdom": "^26.1.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0",
+    "vite": "^5.0.0",
     "vitest": "^3.2.4"
   },
-  "packageManager": "bun@1.2.12"
+  "packageManager": "bun@1.2.12",
+  "type": "module"
 }
